--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -275,7 +275,7 @@ jobs:
   - task: ManifestGeneratorTask@0
     displayName: 'SBOM Generation Task'
     inputs:
-      BuildDropPath: '$(Build.ArtifactStagingDirectory)'
+      BuildDropPath: '$(System.DefaultWorkingDirectory)/packages'
       Verbosity: 'Information'
 
   - publish: $(System.DefaultWorkingDirectory)/packages
