add msbuild property for users to set worker indexing in their apps

--- a/sdk/Sdk/Targets/Microsoft.Azure.Functions.Worker.Sdk.targets
+++ b/sdk/Sdk/Targets/Microsoft.Azure.Functions.Worker.Sdk.targets
@@ -31,6 +31,8 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
     <_FunctionsExtensionsFullPublish Condition="$(NoBuild) == '' And $(_FunctionsExtensionsFullPublish) == ''">True</_FunctionsExtensionsFullPublish>
     <_FunctionsExtensionsFullPublish Condition="$(_FunctionsExtensionsFullPublish) == ''">!$(NoBuild)</_FunctionsExtensionsFullPublish>
     <MSBuildFunctionsTargetsPath>$(MSBuildExtensionsPath)\Microsoft\VisualStudio\Managed.Functions\</MSBuildFunctionsTargetsPath>
+
+    <EnableWorkerIndexing Condition="$(EnableWorkerIndexing) == ''">false</EnableWorkerIndexing>
   </PropertyGroup>
 
   <UsingTask TaskName="GenerateFunctionMetadata"
@@ -79,7 +81,8 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         File="$(OutputFile)"
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', '{WorkerRoot}$(TargetName)')
-                                  .Replace('$functionWorker$', '$(TargetName).dll'))"
+                                  .Replace('$functionWorker$', '$(TargetName).dll')
+                                  .Replace('$enableWorkerIndexing$', '$(EnableWorkerIndexing)'))"
         Overwrite="true" />
 
     <WriteLinesToFile
@@ -87,7 +90,8 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         File="$(OutputFile)"
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', 'dotnet')
-                                  .Replace('$functionWorker$', '$(TargetName).dll'))"
+                                  .Replace('$functionWorker$', '$(TargetName).dll')
+                                  .Replace('$enableWorkerIndexing$', '$(EnableWorkerIndexing)'))"
         Overwrite="true" />
 
   </Target>
@@ -257,7 +261,8 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         File="$(OutputFile)"
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', '{WorkerRoot}$(TargetName)')
-                                  .Replace('$functionWorker$', '$(TargetName).dll'))"
+                                  .Replace('$functionWorker$', '$(TargetName).dll')
+                                  .Replace('$enableWorkerIndexing$', '$(EnableWorkerIndexing)'))"
         Overwrite="true" />
 
     <WriteLinesToFile
@@ -265,7 +270,8 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         File="$(OutputFile)"
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', 'dotnet')
-                                  .Replace('$functionWorker$', '$(TargetName).dll'))"
+                                  .Replace('$functionWorker$', '$(TargetName).dll')
+                                  .Replace('$enableWorkerIndexing$', '$(EnableWorkerIndexing)'))"
         Overwrite="true" />
 
   </Target>
