refactor to use workerarguments as the flag to check indexing at startup

--- a/sdk/Sdk/Targets/Microsoft.Azure.Functions.Worker.Sdk.targets
+++ b/sdk/Sdk/Targets/Microsoft.Azure.Functions.Worker.Sdk.targets
@@ -82,7 +82,8 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', '{WorkerRoot}$(TargetName)')
                                   .Replace('$functionWorker$', '$(TargetName).dll')
-                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)'))"
+                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)')
+                                  .Replace('%AZURE_FUNCTIONS_WORKER_INDEXING%', ' --EnableWorkerIndexing $(FunctionsEnableWorkerIndexing)'))"
         Overwrite="true" />
 
     <WriteLinesToFile
@@ -91,7 +92,8 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', 'dotnet')
                                   .Replace('$functionWorker$', '$(TargetName).dll')
-                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)'))"
+                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)')
+                                  .Replace('%AZURE_FUNCTIONS_WORKER_INDEXING%', ' --EnableWorkerIndexing $(FunctionsEnableWorkerIndexing)'))"
         Overwrite="true" />
 
   </Target>
@@ -262,7 +264,8 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', '{WorkerRoot}$(TargetName)')
                                   .Replace('$functionWorker$', '$(TargetName).dll')
-                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)'))"
+                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)')
+                                  .Replace('%AZURE_FUNCTIONS_WORKER_INDEXING%', ' --EnableWorkerIndexing $(FunctionsEnableWorkerIndexing)'))"
         Overwrite="true" />
 
     <WriteLinesToFile
@@ -271,7 +274,8 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', 'dotnet')
                                   .Replace('$functionWorker$', '$(TargetName).dll')
-                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)'))"
+                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)')
+                                  .Replace('%AZURE_FUNCTIONS_WORKER_INDEXING%', ' --EnableWorkerIndexing $(FunctionsEnableWorkerIndexing)'))"
         Overwrite="true" />
 
   </Target>
