--- a/src/DotNetWorker.Core/DotNetWorker.Core.csproj
+++ b/src/DotNetWorker.Core/DotNetWorker.Core.csproj
@@ -8,7 +8,8 @@
         <AssemblyName>Microsoft.Azure.Functions.Worker.Core</AssemblyName>
         <RootNamespace>Microsoft.Azure.Functions.Worker.Core</RootNamespace>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <MinorProductVersion>6</MinorProductVersion>
+        <MinorProductVersion>7</MinorProductVersion>
+        <PatchProductVersion>1</PatchProductVersion>
         <VersionSuffix>-preview1</VersionSuffix>
     </PropertyGroup>
 
