revert to wait for host call to index design

--- a/sdk/Sdk/Targets/Microsoft.Azure.Functions.Worker.Sdk.targets
+++ b/sdk/Sdk/Targets/Microsoft.Azure.Functions.Worker.Sdk.targets
@@ -82,8 +82,7 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', '{WorkerRoot}$(TargetName)')
                                   .Replace('$functionWorker$', '$(TargetName).dll')
-                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)')
-                                  .Replace('%AZURE_FUNCTIONS_WORKER_INDEXING%', ' --EnableWorkerIndexing $(FunctionsEnableWorkerIndexing)'))"
+                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)'))"
         Overwrite="true" />
 
     <WriteLinesToFile
@@ -92,8 +91,7 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', 'dotnet')
                                   .Replace('$functionWorker$', '$(TargetName).dll')
-                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)')
-                                  .Replace('%AZURE_FUNCTIONS_WORKER_INDEXING%', ' --EnableWorkerIndexing $(FunctionsEnableWorkerIndexing)'))"
+                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)'))"
         Overwrite="true" />
 
   </Target>
@@ -264,8 +262,7 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', '{WorkerRoot}$(TargetName)')
                                   .Replace('$functionWorker$', '$(TargetName).dll')
-                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)')
-                                  .Replace('%AZURE_FUNCTIONS_WORKER_INDEXING%', ' --EnableWorkerIndexing $(FunctionsEnableWorkerIndexing)'))"
+                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)'))"
         Overwrite="true" />
 
     <WriteLinesToFile
@@ -274,8 +271,7 @@ WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and
         Lines="$([System.IO.File]::ReadAllText($(_FunctionsWorkerConfigInputFile))
                                   .Replace('$functionExe$', 'dotnet')
                                   .Replace('$functionWorker$', '$(TargetName).dll')
-                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)')
-                                  .Replace('%AZURE_FUNCTIONS_WORKER_INDEXING%', ' --EnableWorkerIndexing $(FunctionsEnableWorkerIndexing)'))"
+                                  .Replace('$enableWorkerIndexing$', '$(FunctionsEnableWorkerIndexing)'))"
         Overwrite="true" />
 
   </Target>
