--- a/sdk/Sdk/worker.config.json
+++ b/sdk/Sdk/worker.config.json
@@ -4,7 +4,6 @@
     "extensions": [ ".dll" ],
     "defaultExecutablePath": "$functionExe$",
     "defaultWorkerPath": "$functionWorker$",
-    "workerIndexing": "$enableWorkerIndexing$",
-    "workerArguments": ["%AZURE_FUNCTIONS_WORKER_INDEXING%"]
+    "workerIndexing": "$enableWorkerIndexing$"
   }
 }
